Adds JWT authentication.